# typelessless

./: .gitignore  CLAUDE.md  LICENSE  README.md  build.ps1  config.example.toml  pyproject.toml  run.ps1  typelessless.spec
android/: .gitignore  build.gradle.kts  dev.sh  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: words_en.txt
android/app/src/main/java/je/yw/typelessless/: LatinKeyboardView.kt  MainActivity.kt  PermissionActivity.kt  SettingsActivity.kt  SuggestionEngine.kt  TypelesslessImeService.kt
android/app/src/main/java/je/yw/typelessless/pipeline/: AudioCapture.kt  ClaudeCleaner.kt  Prompts.kt  SonioxClient.kt  WavReader.kt
android/app/src/main/java/je/yw/typelessless/settings/: Keys.kt  Settings.kt  SettingsStore.kt
android/app/src/main/res/drawable/: ic_language.xml  ic_mic.xml  ic_settings.xml  key_background.xml  key_preview_bg.xml
android/app/src/main/res/layout/: key_preview.xml  keyboard_popup.xml  keyboard_view.xml
android/app/src/main/res/values/: dimens.xml  strings.xml
android/app/src/main/res/xml/: kbd_popup.xml  method.xml  qwerty.xml  symbols.xml
docs/: android-plan.md
shared/: defaults.json
src/typelessless/: __main__.py  app.py  audio.py  config.py  dictlog.py  filetest.py  foreground.py  history.py  hotkey.py  inject.py  modes.py  overlay.py  selfcheck.py  settings.py  startup.py  sysmute.py  tray.py  webui.py
src/typelessless/cleanup/: base.py  claude.py  passthrough.py
src/typelessless/stt/: base.py  soniox.py
